{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 180,
  "lineage": "aba16e70-3ecd-ac84-6bdb-3f19f9c9fa49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "yh_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dca421c4b6feab8c",
            "associate_with_private_ip": "10.2.0.11",
            "association_id": "eipassoc-0d243e74643f2b1fd",
            "domain": "vpc",
            "id": "eipalloc-0dca421c4b6feab8c",
            "instance": "i-0ff2014061b705c9d",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-050c9e0253e89c85a",
            "private_dns": "ip-10-2-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.2.0.11",
            "public_dns": "ec2-3-34-247-115.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.247.115",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.yh_web",
            "aws_internet_gateway.yh_ig",
            "aws_security_group.yh_websg",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc",
            "data.aws_ami.amzn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "yh_eip_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcdbe26f02aabbd3",
            "domain": "vpc",
            "id": "eipalloc-0dcdbe26f02aabbd3",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-52-78-26-165.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.26.165",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "yh_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a5a6128e65676ebb",
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:instance/i-0ff2014061b705c9d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff2014061b705c9d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lab7key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-050c9e0253e89c85a",
            "private_dns": "ip-10-2-0-11.ap-northeast-2.compute.internal",
            "private_ip": "10.2.0.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-020c6850058d644e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f24c48e3329ce0b3",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f084351107185106"
            ]
          },
          "dependencies": [
            "aws_security_group.yh_websg",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc",
            "data.aws_ami.amzn"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "yh_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:internet-gateway/igw-029e7cd299bc0aac1",
            "id": "igw-029e7cd299bc0aac1",
            "owner_id": "782146286667",
            "tags": {
              "Name": "yth-ig"
            },
            "tags_all": {
              "Name": "yth-ig"
            },
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "yh_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:loadbalancer/app/yh-alb/59fb7c703ebf18d6",
            "arn_suffix": "app/yh-alb/59fb7c703ebf18d6",
            "dns_name": "yh-alb-1586181445.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:loadbalancer/app/yh-alb/59fb7c703ebf18d6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "yh-alb",
            "security_groups": [
              "sg-0f084351107185106"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0430622f80edc74d8"
              },
              {
                "subnet_id": "subnet-0f24c48e3329ce0b3"
              }
            ],
            "subnets": [
              "subnet-0430622f80edc74d8",
              "subnet-0f24c48e3329ce0b3"
            ],
            "vpc_id": "vpc-02e028bd8e47b7682",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.yh_websg",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "yh_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:listener/app/yh-alb/59fb7c703ebf18d6/bdb7485ebd8c3d5f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:targetgroup/wordpressTG/336a1e3068e115d5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:listener/app/yh-alb/59fb7c703ebf18d6/bdb7485ebd8c3d5f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:loadbalancer/app/yh-alb/59fb7c703ebf18d6",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.yh_alb",
            "aws_lb_target_group.yh_tg",
            "aws_security_group.yh_websg",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "yh_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:targetgroup/wordpressTG/336a1e3068e115d5",
            "arn_suffix": "targetgroup/wordpressTG/336a1e3068e115d5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/health.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:782146286667:targetgroup/wordpressTG/336a1e3068e115d5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpressTG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "yh_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcdbe26f02aabbd3",
            "connectivity_type": "public",
            "id": "nat-0f7c60a0ff20f028a",
            "network_interface_id": "eni-0d3b6f76b8fa9eef9",
            "private_ip": "10.2.0.15",
            "public_ip": "52.78.26.165",
            "subnet_id": "subnet-0f24c48e3329ce0b3",
            "tags": {
              "Name": "yh-ng"
            },
            "tags_all": {
              "Name": "yh-ng"
            }
          },
          "dependencies": [
            "aws_eip.yh_eip_ng",
            "aws_internet_gateway.yh_ig",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yh_ngrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:route-table/rtb-0764683c41264fe31",
            "id": "rtb-0764683c41264fe31",
            "owner_id": "782146286667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f7c60a0ff20f028a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yh-ngrt"
            },
            "tags_all": {
              "Name": "yh-ngrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.yh_eip_ng",
            "aws_internet_gateway.yh_ig",
            "aws_nat_gateway.yh_ng",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "yh_rf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:route-table/rtb-0685fc2c127fbdc8c",
            "id": "rtb-0685fc2c127fbdc8c",
            "owner_id": "782146286667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-029e7cd299bc0aac1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "yh-rt"
            },
            "tags_all": {
              "Name": "yh-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.yh_ig",
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "yh_ngass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b8aa975b3d62a21",
            "route_table_id": "rtb-0764683c41264fe31",
            "subnet_id": "subnet-0b7f265cf477df389"
          },
          "dependencies": [
            "aws_eip.yh_eip_ng",
            "aws_internet_gateway.yh_ig",
            "aws_nat_gateway.yh_ng",
            "aws_route_table.yh_ngrt",
            "aws_subnet.yh_pri",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c2293d5c6ca0028",
            "route_table_id": "rtb-0764683c41264fe31",
            "subnet_id": "subnet-0cae3f1924ae0c5f1"
          },
          "dependencies": [
            "aws_eip.yh_eip_ng",
            "aws_internet_gateway.yh_ig",
            "aws_nat_gateway.yh_ng",
            "aws_route_table.yh_ngrt",
            "aws_subnet.yh_pri",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "yh_rtas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0902bd711071a88dd",
            "route_table_id": "rtb-0685fc2c127fbdc8c",
            "subnet_id": "subnet-0f24c48e3329ce0b3"
          },
          "dependencies": [
            "aws_internet_gateway.yh_ig",
            "aws_route_table.yh_rf",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebf2aa2a4d2f516c",
            "route_table_id": "rtb-0685fc2c127fbdc8c",
            "subnet_id": "subnet-0430622f80edc74d8"
          },
          "dependencies": [
            "aws_internet_gateway.yh_ig",
            "aws_route_table.yh_rf",
            "aws_subnet.yh_pub",
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yh_websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:security-group/sg-0f084351107185106",
            "description": "web sequrity group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f084351107185106",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http global",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow mysql global",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh global",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allwo icmp ALL",
                "from_port": -1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "yh-WEB-SG",
            "name_prefix": "",
            "owner_id": "782146286667",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "yh-weg-sg"
            },
            "tags_all": {
              "Name": "yh-weg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "yh_pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:subnet/subnet-0b7f265cf477df389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-0b7f265cf477df389",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782146286667",
            "tags": {
              "Name": "yh-pria"
            },
            "tags_all": {
              "Name": "yh-pria"
            },
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:subnet/subnet-0cae3f1924ae0c5f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-0cae3f1924ae0c5f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782146286667",
            "tags": {
              "Name": "yh-pric"
            },
            "tags_all": {
              "Name": "yh-pric"
            },
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "yh_pridb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:subnet/subnet-07d9f4d02b81002f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.4.0/24",
            "id": "subnet-07d9f4d02b81002f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782146286667",
            "tags": {
              "Name": "yh-pria"
            },
            "tags_all": {
              "Name": "yh-pria"
            },
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:subnet/subnet-028d4a8a11425ab1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.5.0/24",
            "id": "subnet-028d4a8a11425ab1b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782146286667",
            "tags": {
              "Name": "yh-pric"
            },
            "tags_all": {
              "Name": "yh-pric"
            },
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "yh_pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:subnet/subnet-0f24c48e3329ce0b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-0f24c48e3329ce0b3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782146286667",
            "tags": {
              "Name": "yh-puba"
            },
            "tags_all": {
              "Name": "yh-puba"
            },
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:subnet/subnet-0430622f80edc74d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0430622f80edc74d8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "782146286667",
            "tags": {
              "Name": "yh-pubc"
            },
            "tags_all": {
              "Name": "yh-pubc"
            },
            "vpc_id": "vpc-02e028bd8e47b7682"
          },
          "dependencies": [
            "aws_vpc.yhkim_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "yhkim_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:782146286667:vpc/vpc-02e028bd8e47b7682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0de6202f1d936804c",
            "default_route_table_id": "rtb-0641ab3c7663c6f32",
            "default_security_group_id": "sg-03207e3f2db9ffffe",
            "dhcp_options_id": "dopt-d3c18eb8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02e028bd8e47b7682",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0641ab3c7663c6f32",
            "owner_id": "782146286667"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}